        Minor updates to build system, including bug fixes when specifying a
        specific BLAS/LAPACK library, and configuration of *.pc files.
    * GraphBLAS 9.0.0: supporting the v2.1 C API;
        see https://github.com/GraphBLAS/graphblas-api-c
    * Example 1.6.0: using GraphBLAS 9.0.0 and SuiteSparse_config 7.5.0,
        remove explicit dependencies on OpenMP, libm, GMP, and MPFR
    * CHOLMOD 5.1.1, SPQR 4.3.1, ParU 0.1.1, LAGraph 1.1.1, UMFPACK 6.3.1,
        KLU 2.3.1: minor updates to build system and MATLAB interfaces

Dec 30, 2023: version 7.4.0

    * major change to build system: by Markus Mützel.  Includes a
        top-level CMakeLists.txt that builds all packages, and support for
        pkg-config. Default location of files is now listed below, where
        PACKAGE is one of the packages in SuiteSparse:
        * CMAKE_INSTALL_PREFIX/include/suitesparse: include files
        * CMAKE_INSTALL_PREFIX/lib: compiled libraries
        * CMAKE_INSTALL_PREFIX/lib/cmake/SuiteSparse: helper *.cmake scripts
            for all of SuiteSparse
        * CMAKE_INSTALL_PREFIX/lib/cmake/PACKAGE: *Config.cmake scripts for a
            specific package
        * CMAKE_INSTALL_PREFIX/lib/pkgconfig/PACKAGE.pc: *.pc pkg-config
            files with information for a specific package
        Additional changes are listed below.
    * LAGraph 1.1.0: new package: graph algorithms based on GraphBLAS
    * ParU 0.1.0: new package: parallel unsymmetric multifrontal method,
        with Mohsen Aznaveh.  This is a stable package but is tagged as 0.1.0
        since the API is still subject to change.
    * CHOLMOD 5.1.0: full support for sparse single precision matrices,
        bug fixes in the GPU Module.
    * AMD 3.3.0: minor change for CHOLMOD 5.1.0 tests
    * CAMD 3.3.0: minor change for CHOLMOD 5.1.0 tests
    * SuiteSparse_config 7.4.0: added wrappers for single-precision BLAS/LAPACK,
        added SUITESPARSE_TIME macro.