@@ -98,7 +98,7 @@ find_package ( CXSparse 4.3.0 REQUIRED )
 find_package ( GraphBLAS 9.0.0 )
 find_package ( KLU 2.3.1 REQUIRED )
 find_package ( KLU_CHOLMOD 2.3.1 REQUIRED )
-find_package ( LDL 3.3.0 REQUIRED )
+find_package ( LDL 3.3.1 REQUIRED )
 find_package ( LAGraph 1.1.1 )
 find_package ( SuiteSparse_Mongoose 3.3.0 REQUIRED )
 find_package ( ParU 0.1.1 REQUIRED )
