@@ -1,2 +1,2 @@
 % version of SuiteSparse/LDL
-\date{VERSION 3.3.0, Dec 30, 2023}
+\date{VERSION 3.3.1, Jan XX, 2024}
