@@ -112,17 +112,17 @@ int64_t ldl_l_valid_matrix ( int64_t n, int64_t Ap [ ], int64_t Ai [ ]) ;
 /* === LDL version ========================================================== */
 /* ========================================================================== */
 
-#define LDL_DATE "Dec 30, 2023"
+#define LDL_DATE "Jan XX, 2024"
 #define LDL_MAIN_VERSION   3
 #define LDL_SUB_VERSION    3
-#define LDL_SUBSUB_VERSION 0
+#define LDL_SUBSUB_VERSION 1
 
 #define LDL_VERSION_CODE(main,sub) SUITESPARSE_VER_CODE(main,sub)
 #define LDL_VERSION LDL_VERSION_CODE(LDL_MAIN_VERSION,LDL_SUB_VERSION)
 
 #if !defined (SUITESPARSE_VERSION) || \
     (SUITESPARSE_VERSION < SUITESPARSE_VER_CODE(7,4))
-#error "LDL 3.3.0 requires SuiteSparse_config 7.4 or later"
+#error "LDL 3.3.1 requires SuiteSparse_config 7.4 or later"
 #endif
 
 #endif
